# charm-deployment-guide

./: .gitignore  .gitreview  .zuul.yaml  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
deploy-guide/source/: 1  about.rst  app-bridge-interface-configuration.rst  app-ceph-iscsi.rst  app-ceph-migration.rst  app-ceph-rbd-mirror.rst  app-certificate-management.rst  app-encryption-at-rest.rst  app-erasure-coding.rst  app-ha-juju-status.rst  app-ha-topology.rst  app-ha.rst  app-hardware-offload.rst  app-managing-power-events-topology.rst  app-managing-power-events.rst  app-manila-ganesha.rst  app-masakari.rst  app-nova-cells.rst  app-octavia.rst  app-ovn.rst  app-pci-passthrough-gpu.rst  app-policy-overrides.rst  app-rgw-multisite.rst  app-series-upgrade-openstack.rst  app-series-upgrade-specific-procedures.rst  app-series-upgrade.rst  app-swift-gc.rst  app-swift.rst  app-trilio-vault.rst  app-upgrade-openstack.rst  app-vault.rst  app.rst  appendices.rst  architecture.rst  ceph-charm-migration.rst  ceph-operations.rst  charmhub-migration.rst  charms.rst  cinder-lvm-migration.rst  cinder-volume-replication-dr.rst  (+64 more)
deploy-guide/source/_extra/: .htaccess
deploy-guide/test/: redirect-tests.txt
doc/source/: conf.py  config-openstack.rst  install-openstack-bundle.rst
