[metadata]
name = charm-deployment-guide
summary = OpenStack Charm Deployment Guide
description-file =
    README.rst
author = OpenStack
author-email = openstack@lists.openstack.org
home-page = https://docs.openstack.org/project-deploy-guide/charm-deployment-guide
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1
