[metadata]
name = charm-deployment-guide
summary = OpenStack Charm Deployment Guide
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/project-deploy-guide/charm-deployment-guide
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
