[metadata]
name = charm-deployment-guide
summary = OpenStack Charm Deployment Guide
description_file =
    README.md
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/project-deploy-guide/charm-deployment-guide
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
